wwpdb/utils/nmr/pk/CcpnNPKParser.py
# Generated from CcpnNPKParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CcpnNPKParser ( Parser ):

    grammarFileName = "CcpnNPKParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Position F2'", "'Position F3'", "'Position F4'", 
                     "<INVALID>", "'Shift F2'", "'Shift F3'", "'Shift F4'", 
                     "<INVALID>", "'Assign F2'", "'Assign F3'", "'Assign F4'", 
                     "'Height'", "'Volume'", "'Line Width F1 (Hz)'", "'Line Width F2 (Hz)'", 
                     "'Line Width F3 (Hz)'", "'Line Width F4 (Hz)'", "'Merit'", 
                     "'Details'", "'Fit Method'", "'Vol. Method'" ]

    symbolicNames = [ "<INVALID>", "Assign_F1", "Position_F1", "Shift_F1", 
                      "Integer", "Float", "Real", "SHARP_COMMENT", "EXCLM_COMMENT", 
                      "SMCLN_COMMENT", "Simple_name", "SPACE", "RETURN", 
                      "SECTION_COMMENT", "LINE_COMMENT", "Position_F1_", 
                      "Position_F2", "Position_F3", "Position_F4", "Shift_F1_", 
                      "Shift_F2", "Shift_F3", "Shift_F4", "Assign_F1_", 
                      "Assign_F2", "Assign_F3", "Assign_F4", "Height", "Volume", 
                      "Line_width_F1", "Line_width_F2", "Line_width_F3", 
                      "Line_width_F4", "Merit", "Details", "Fit_method", 
                      "Vol_method", "SPACE_VARS", "RETURN_VARS" ]

    RULE_ccpn_npk = 0
    RULE_peak_list_2d = 1
    RULE_peak_2d = 2
    RULE_peak_list_3d = 3
    RULE_peak_3d = 4
    RULE_peak_list_4d = 5
    RULE_peak_4d = 6
    RULE_position = 7
    RULE_number = 8

    ruleNames =  [ "ccpn_npk", "peak_list_2d", "peak_2d", "peak_list_3d", 
                   "peak_3d", "peak_list_4d", "peak_4d", "position", "number" ]

    EOF = Token.EOF
    Assign_F1=1
    Position_F1=2
    Shift_F1=3
    Integer=4
    Float=5
    Real=6
    SHARP_COMMENT=7
    EXCLM_COMMENT=8
    SMCLN_COMMENT=9
    Simple_name=10
    SPACE=11
    RETURN=12
    SECTION_COMMENT=13
    LINE_COMMENT=14
    Position_F1_=15
    Position_F2=16
    Position_F3=17
    Position_F4=18
    Shift_F1_=19
    Shift_F2=20
    Shift_F3=21
    Shift_F4=22
    Assign_F1_=23
    Assign_F2=24
    Assign_F3=25
    Assign_F4=26
    Height=27
    Volume=28
    Line_width_F1=29
    Line_width_F2=30
    Line_width_F3=31
    Line_width_F4=32
    Merit=33
    Details=34
    Fit_method=35
    Vol_method=36
    SPACE_VARS=37
    RETURN_VARS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Ccpn_npkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CcpnNPKParser.EOF, 0)

        def RETURN(self, i:int=None):
            if i is None:
                return self.getTokens(CcpnNPKParser.RETURN)
            else:
                return self.getToken(CcpnNPKParser.RETURN, i)

        def peak_list_2d(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CcpnNPKParser.Peak_list_2dContext)
            else:
                return self.getTypedRuleContext(CcpnNPKParser.Peak_list_2dContext,i)


        def peak_list_3d(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CcpnNPKParser.Peak_list_3dContext)
            else:
                return self.getTypedRuleContext(CcpnNPKParser.Peak_list_3dContext,i)


        def peak_list_4d(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CcpnNPKParser.Peak_list_4dContext)
            else:
                return self.getTypedRuleContext(CcpnNPKParser.Peak_list_4dContext,i)


        def getRuleIndex(self):
            return CcpnNPKParser.RULE_ccpn_npk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCcpn_npk" ):
                listener.enterCcpn_npk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCcpn_npk" ):
                listener.exitCcpn_npk(self)




    def ccpn_npk(self):

        localctx = CcpnNPKParser.Ccpn_npkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ccpn_npk)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 18
                self.match(CcpnNPKParser.RETURN)


            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4110) != 0):
                self.state = 25
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 21
                    self.peak_list_2d()
                    pass

                elif la_ == 2:
                    self.state = 22
                    self.peak_list_3d()
                    pass

                elif la_ == 3:
                    self.state = 23
                    self.peak_list_4d()
                    pass

                elif la_ == 4:
                    self.state = 24
                    self.match(CcpnNPKParser.RETURN)
                    pass


                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(CcpnNPKParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Peak_list_2dContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Height(self):
            return self.getToken(CcpnNPKParser.Height, 0)

        def RETURN_VARS(self):
            return self.getToken(CcpnNPKParser.RETURN_VARS, 0)

        def Volume(self):
            return self.getToken(CcpnNPKParser.Volume, 0)

        def Line_width_F1(self):
            return self.getToken(CcpnNPKParser.Line_width_F1, 0)

        def Line_width_F2(self):
            return self.getToken(CcpnNPKParser.Line_width_F2, 0)

        def Merit(self):
            return self.getToken(CcpnNPKParser.Merit, 0)

        def Details(self):
            return self.getToken(CcpnNPKParser.Details, 0)

        def Fit_method(self):
            return self.getToken(CcpnNPKParser.Fit_method, 0)

        def Vol_method(self):
            return self.getToken(CcpnNPKParser.Vol_method, 0)

        def peak_2d(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CcpnNPKParser.Peak_2dContext)
            else:
                return self.getTypedRuleContext(CcpnNPKParser.Peak_2dContext,i)


        def Assign_F1_(self):
            return self.getToken(CcpnNPKParser.Assign_F1_, 0)

        def Assign_F2(self):
            return self.getToken(CcpnNPKParser.Assign_F2, 0)

        def Assign_F1(self):
            return self.getToken(CcpnNPKParser.Assign_F1, 0)

        def Position_F1(self):
            return self.getToken(CcpnNPKParser.Position_F1, 0)

        def Shift_F1(self):
            return self.getToken(CcpnNPKParser.Shift_F1, 0)

        def Position_F2(self):
            return self.getToken(CcpnNPKParser.Position_F2, 0)

        def Shift_F2(self):
            return self.getToken(CcpnNPKParser.Shift_F2, 0)

        def Position_F1_(self):
            return self.getToken(CcpnNPKParser.Position_F1_, 0)

        def Shift_F1_(self):
            return self.getToken(CcpnNPKParser.Shift_F1_, 0)

        def getRuleIndex(self):
            return CcpnNPKParser.RULE_peak_list_2d

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeak_list_2d" ):
                listener.enterPeak_list_2d(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeak_list_2d" ):
                listener.exitPeak_list_2d(self)




    def peak_list_2d(self):

        localctx = CcpnNPKParser.Peak_list_2dContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_peak_list_2d)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3]:
                self.state = 32
                _la = self._input.LA(1)
                if not(_la==2 or _la==3):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 33
                _la = self._input.LA(1)
                if not(_la==16 or _la==20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 34
                self.match(CcpnNPKParser.Assign_F1_)
                self.state = 35
                self.match(CcpnNPKParser.Assign_F2)
                pass
            elif token in [1]:
                self.state = 36
                self.match(CcpnNPKParser.Assign_F1)
                self.state = 37
                self.match(CcpnNPKParser.Assign_F2)
                self.state = 38
                _la = self._input.LA(1)
                if not(_la==15 or _la==19):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 39
                _la = self._input.LA(1)
                if not(_la==16 or _la==20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 42
            self.match(CcpnNPKParser.Height)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 43
                self.match(CcpnNPKParser.Volume)


            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 46
                self.match(CcpnNPKParser.Line_width_F1)


            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 49
                self.match(CcpnNPKParser.Line_width_F2)


            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 52
                self.match(CcpnNPKParser.Merit)


            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 55
                self.match(CcpnNPKParser.Details)


            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 58
                self.match(CcpnNPKParser.Fit_method)


            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 61
                self.match(CcpnNPKParser.Vol_method)


            self.state = 64
            self.match(CcpnNPKParser.RETURN_VARS)
            self.state = 66 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 65
                self.peak_2d()
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1136) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Peak_2dContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CcpnNPKParser.NumberContext)
            else:
                return self.getTypedRuleContext(CcpnNPKParser.NumberContext,i)


        def RETURN(self):
            return self.getToken(CcpnNPKParser.RETURN, 0)

        def EOF(self):
            return self.getToken(CcpnNPKParser.EOF, 0)

        def position(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CcpnNPKParser.PositionContext)
            else:
                return self.getTypedRuleContext(CcpnNPKParser.PositionContext,i)


        def Simple_name(self, i:int=None):
            if i is None:
                return self.getTokens(CcpnNPKParser.Simple_name)
            else:
                return self.getToken(CcpnNPKParser.Simple_name, i)

        def getRuleIndex(self):
            return CcpnNPKParser.RULE_peak_2d

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeak_2d" ):
                listener.enterPeak_2d(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeak_2d" ):
                listener.exitPeak_2d(self)




    def peak_2d(self):

        localctx = CcpnNPKParser.Peak_2dContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_peak_2d)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 70
                self.position()
                self.state = 71
                self.position()
                self.state = 72
                self.match(CcpnNPKParser.Simple_name)
                self.state = 73
                self.match(CcpnNPKParser.Simple_name)
                pass

            elif la_ == 2:
                self.state = 75
                self.match(CcpnNPKParser.Simple_name)
                self.state = 76
                self.match(CcpnNPKParser.Simple_name)
                self.state = 77
                self.position()
                self.state = 78
                self.position()
                pass


            self.state = 82
            self.number()
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 83
                self.number()


            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 86
                self.position()


            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 89
                self.position()


            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 92
                self.position()


            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 95
                self.match(CcpnNPKParser.Simple_name)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            _la = self._input.LA(1)
            if not(_la==-1 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Peak_list_3dContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Height(self):
            return self.getToken(CcpnNPKParser.Height, 0)

        def RETURN_VARS(self):
            return self.getToken(CcpnNPKParser.RETURN_VARS, 0)

        def Volume(self):
            return self.getToken(CcpnNPKParser.Volume, 0)

        def Line_width_F1(self):
            return self.getToken(CcpnNPKParser.Line_width_F1, 0)

        def Line_width_F2(self):
            return self.getToken(CcpnNPKParser.Line_width_F2, 0)

        def Line_width_F3(self):
            return self.getToken(CcpnNPKParser.Line_width_F3, 0)

        def Merit(self):
            return self.getToken(CcpnNPKParser.Merit, 0)

        def Details(self):
            return self.getToken(CcpnNPKParser.Details, 0)

        def Fit_method(self):
            return self.getToken(CcpnNPKParser.Fit_method, 0)

        def Vol_method(self):
            return self.getToken(CcpnNPKParser.Vol_method, 0)

        def peak_3d(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CcpnNPKParser.Peak_3dContext)
            else:
                return self.getTypedRuleContext(CcpnNPKParser.Peak_3dContext,i)


        def Assign_F1_(self):
            return self.getToken(CcpnNPKParser.Assign_F1_, 0)

        def Assign_F2(self):
            return self.getToken(CcpnNPKParser.Assign_F2, 0)

        def Assign_F3(self):
            return self.getToken(CcpnNPKParser.Assign_F3, 0)

        def Assign_F1(self):
            return self.getToken(CcpnNPKParser.Assign_F1, 0)

        def Position_F1(self):
            return self.getToken(CcpnNPKParser.Position_F1, 0)

        def Shift_F1(self):
            return self.getToken(CcpnNPKParser.Shift_F1, 0)

        def Position_F2(self):
            return self.getToken(CcpnNPKParser.Position_F2, 0)

        def Shift_F2(self):
            return self.getToken(CcpnNPKParser.Shift_F2, 0)

        def Position_F3(self):
            return self.getToken(CcpnNPKParser.Position_F3, 0)

        def Shift_F3(self):
            return self.getToken(CcpnNPKParser.Shift_F3, 0)

        def Position_F1_(self):
            return self.getToken(CcpnNPKParser.Position_F1_, 0)

        def Shift_F1_(self):
            return self.getToken(CcpnNPKParser.Shift_F1_, 0)

        def getRuleIndex(self):
            return CcpnNPKParser.RULE_peak_list_3d

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeak_list_3d" ):
                listener.enterPeak_list_3d(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeak_list_3d" ):
                listener.exitPeak_list_3d(self)




    def peak_list_3d(self):

        localctx = CcpnNPKParser.Peak_list_3dContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_peak_list_3d)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3]:
                self.state = 103
                _la = self._input.LA(1)
                if not(_la==2 or _la==3):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 104
                _la = self._input.LA(1)
                if not(_la==16 or _la==20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 105
                _la = self._input.LA(1)
                if not(_la==17 or _la==21):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 106
                self.match(CcpnNPKParser.Assign_F1_)
                self.state = 107
                self.match(CcpnNPKParser.Assign_F2)
                self.state = 108
                self.match(CcpnNPKParser.Assign_F3)
                pass
            elif token in [1]:
                self.state = 109
                self.match(CcpnNPKParser.Assign_F1)
                self.state = 110
                self.match(CcpnNPKParser.Assign_F2)
                self.state = 111
                self.match(CcpnNPKParser.Assign_F3)
                self.state = 112
                _la = self._input.LA(1)
                if not(_la==15 or _la==19):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 113
                _la = self._input.LA(1)
                if not(_la==16 or _la==20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 114
                _la = self._input.LA(1)
                if not(_la==17 or _la==21):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 117
            self.match(CcpnNPKParser.Height)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 118
                self.match(CcpnNPKParser.Volume)


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 121
                self.match(CcpnNPKParser.Line_width_F1)


            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 124
                self.match(CcpnNPKParser.Line_width_F2)


            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 127
                self.match(CcpnNPKParser.Line_width_F3)


            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 130
                self.match(CcpnNPKParser.Merit)


            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 133
                self.match(CcpnNPKParser.Details)


            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 136
                self.match(CcpnNPKParser.Fit_method)


            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 139
                self.match(CcpnNPKParser.Vol_method)


            self.state = 142
            self.match(CcpnNPKParser.RETURN_VARS)
            self.state = 144 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 143
                self.peak_3d()
                self.state = 146 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1136) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Peak_3dContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CcpnNPKParser.NumberContext)
            else:
                return self.getTypedRuleContext(CcpnNPKParser.NumberContext,i)


        def RETURN(self):
            return self.getToken(CcpnNPKParser.RETURN, 0)

        def EOF(self):
            return self.getToken(CcpnNPKParser.EOF, 0)

        def position(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CcpnNPKParser.PositionContext)
            else:
                return self.getTypedRuleContext(CcpnNPKParser.PositionContext,i)


        def Simple_name(self, i:int=None):
            if i is None:
                return self.getTokens(CcpnNPKParser.Simple_name)
            else:
                return self.getToken(CcpnNPKParser.Simple_name, i)

        def getRuleIndex(self):
            return CcpnNPKParser.RULE_peak_3d

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeak_3d" ):
                listener.enterPeak_3d(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeak_3d" ):
                listener.exitPeak_3d(self)




    def peak_3d(self):

        localctx = CcpnNPKParser.Peak_3dContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_peak_3d)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,28,self._ctx)
            if la_ == 1:
                self.state = 148
                self.position()
                self.state = 149
                self.position()
                self.state = 150
                self.position()
                self.state = 151
                self.match(CcpnNPKParser.Simple_name)
                self.state = 152
                self.match(CcpnNPKParser.Simple_name)
                self.state = 153
                self.match(CcpnNPKParser.Simple_name)
                pass

            elif la_ == 2:
                self.state = 155
                self.match(CcpnNPKParser.Simple_name)
                self.state = 156
                self.match(CcpnNPKParser.Simple_name)
                self.state = 157
                self.match(CcpnNPKParser.Simple_name)
                self.state = 158
                self.position()
                self.state = 159
                self.position()
                self.state = 160
                self.position()
                pass


            self.state = 164
            self.number()
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,29,self._ctx)
            if la_ == 1:
                self.state = 165
                self.number()


            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,30,self._ctx)
            if la_ == 1:
                self.state = 168
                self.position()


            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,31,self._ctx)
            if la_ == 1:
                self.state = 171
                self.position()


            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,32,self._ctx)
            if la_ == 1:
                self.state = 174
                self.position()


            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,33,self._ctx)
            if la_ == 1:
                self.state = 177
                self.position()


            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 180
                self.match(CcpnNPKParser.Simple_name)
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 186
            _la = self._input.LA(1)
            if not(_la==-1 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Peak_list_4dContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Height(self):
            return self.getToken(CcpnNPKParser.Height, 0)

        def RETURN_VARS(self):
            return self.getToken(CcpnNPKParser.RETURN_VARS, 0)

        def Volume(self):
            return self.getToken(CcpnNPKParser.Volume, 0)

        def Line_width_F1(self):
            return self.getToken(CcpnNPKParser.Line_width_F1, 0)

        def Line_width_F2(self):
            return self.getToken(CcpnNPKParser.Line_width_F2, 0)

        def Line_width_F3(self):
            return self.getToken(CcpnNPKParser.Line_width_F3, 0)

        def Line_width_F4(self):
            return self.getToken(CcpnNPKParser.Line_width_F4, 0)

        def Merit(self):
            return self.getToken(CcpnNPKParser.Merit, 0)

        def Details(self):
            return self.getToken(CcpnNPKParser.Details, 0)

        def Fit_method(self):
            return self.getToken(CcpnNPKParser.Fit_method, 0)

        def Vol_method(self):
            return self.getToken(CcpnNPKParser.Vol_method, 0)

        def peak_4d(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CcpnNPKParser.Peak_4dContext)
            else:
                return self.getTypedRuleContext(CcpnNPKParser.Peak_4dContext,i)


        def Assign_F1_(self):
            return self.getToken(CcpnNPKParser.Assign_F1_, 0)

        def Assign_F2(self):
            return self.getToken(CcpnNPKParser.Assign_F2, 0)

        def Assign_F3(self):
            return self.getToken(CcpnNPKParser.Assign_F3, 0)

        def Assign_F4(self):
            return self.getToken(CcpnNPKParser.Assign_F4, 0)

        def Assign_F1(self):
            return self.getToken(CcpnNPKParser.Assign_F1, 0)

        def Position_F1(self):
            return self.getToken(CcpnNPKParser.Position_F1, 0)

        def Shift_F1(self):
            return self.getToken(CcpnNPKParser.Shift_F1, 0)

        def Position_F2(self):
            return self.getToken(CcpnNPKParser.Position_F2, 0)

        def Shift_F2(self):
            return self.getToken(CcpnNPKParser.Shift_F2, 0)

        def Position_F3(self):
            return self.getToken(CcpnNPKParser.Position_F3, 0)

        def Shift_F3(self):
            return self.getToken(CcpnNPKParser.Shift_F3, 0)

        def Position_F4(self):
            return self.getToken(CcpnNPKParser.Position_F4, 0)

        def Shift_F4(self):
            return self.getToken(CcpnNPKParser.Shift_F4, 0)

        def Position_F1_(self):
            return self.getToken(CcpnNPKParser.Position_F1_, 0)

        def Shift_F1_(self):
            return self.getToken(CcpnNPKParser.Shift_F1_, 0)

        def getRuleIndex(self):
            return CcpnNPKParser.RULE_peak_list_4d

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeak_list_4d" ):
                listener.enterPeak_list_4d(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeak_list_4d" ):
                listener.exitPeak_list_4d(self)




    def peak_list_4d(self):
